fixup page loading by only applying transitions after page has loaded. This fixed the issue where the fade of the colours would case the bg to flicker and the text to be white for a split millisecond on page load. These should now be fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,9 +11,10 @@
   color-scheme: dark;
 }
 
-* {
-  transition: all 0.2s ease-in-out;
+img {
+  transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
+
 
 html {
   display: flex;
@@ -36,12 +37,16 @@ body {
 #text,
 #image {
   opacity: 0;
-  transition: opacity 0.3s ease-in;
 }
 
 #text.loaded,
 #image.loaded {
   opacity: 1;
+	transition: opacity 0.3s ease-in;
+}
+
+#text.loaded * {
+	transition: color 0.2s ease-in-out;
 }
 
 #carouselImage {
@@ -87,7 +92,6 @@ body {
   color: var(--accent-color);
   font-size: 1.6em;
   font-weight: 600;
-  transition: color 0.2s ease-out;
 	width: 200px;
 }
 
@@ -106,7 +110,6 @@ a {
   color: var(--text-color);
   font-size: 1.2em;
   text-decoration: none;
-  transition: color ease-out 0.2s;
 }
 
 a:hover {
